...
    case even, lance, rightLance, bishop, rook, rookLance, two, four, six, eight, ten
    public var title: String {
        switch self {
        case .even: return "平手"; case .lance: return "香落ち"; case .rightLance: return "右香落ち"
        case .bishop: return "角落ち"; case .rook: return "飛車落ち"; case .rookLance: return "飛香落ち"
        case .two: return "二枚落ち"; case .four: return "四枚落ち"; case .six: return "六枚落ち"
        case .eight: return "八枚落ち"; case .ten: return "十枚落ち"
        }
    }
    // Coordinates from the white/upper player's initial position.
    public var removed: [Int] {
        switch self {
        case .even: return []; case .lance: return [8]; case .rightLance: return [0]
...
